--- a/Snippets.csproj
+++ b/Snippets.csproj
@@ -1,12 +1,12 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project DefaultTargets="Build" ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">x86</Platform>
     <ProjectGuid>{2C3E1F52-E8C1-49D9-B83F-CDE5D4F4AE7D}</ProjectGuid>
     <OutputType>Library</OutputType>
-    <RootNamespace>FastTests</RootNamespace>
-    <AssemblyName>FastTests</AssemblyName>
+    <RootNamespace>Snippets</RootNamespace>
+    <AssemblyName>Snippets</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|x86' ">
@@ -33,6 +33,7 @@
     <Reference Include="System" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="EnvironmentResource.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="InheritableStatic.cs" />
   </ItemGroup>
